--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,3 +1,9 @@
 .header {
-  .header__wrapper {}
+  height: 64px;
+  line-height: 64px;
+  box-shadow: 0 1px 7px rgba(0, 0, 0, .06);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 40px;
 }
