unify path make sure use snake case path but PascalCase class file make sure use flat model in module.scss, avoid deep css selection

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
-@import 'variables';
-@import 'mixins';
-@import 'normalize';
+@import "variables";
+@import "mixins";
+@import "normalize";
 
-@import 'layout';
+@import "layout";
 
-@import './components/index';
+@import "./components/index";
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
