--- a/src/components/left-pannel/left-pannel.module.scss
+++ b/src/components/left-pannel/left-pannel.module.scss
@@ -1,7 +1,7 @@
 @import "src/styles/variables.scss";
 
 .left-pannel {
-  min-width: 350px;
+  min-width: 334px;
   height: 100%;
   display: flex;
 }
@@ -25,8 +25,6 @@
   height: 60px;
   width: 60px;
   font-size: 30px;
-  border-top-right-radius: 12px;
-  border-bottom-right-radius: 12px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -51,6 +49,15 @@
   }
 }
 
-.content-container {
+.contents {
   flex-grow: 1;
+}
+
+.content-container {
+  display: none;
+  position: relative;
+
+  &.active {
+    display: block;
+  }
 }
