--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,6 @@
 $primary-color: #f40552;
 $secondary-color: #c5e99b;
 $emphasis-color: #56445d;
+$emphasis-background-color: #ece2f1;
+
+$standard-gap: 8px;
